# operon

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  VISION.md
.github/workflows/: ci.yml  deploy-pages.yml
benchmarks/: APPBENCH.md  APPBENCH_RESULTS.md  README.md  RESULTS.md  SMOKE.md  __init__.py  app_cases.json  app_rescore.py  appbench.py  cases.json  compare.py  matrix.py  profiles.example.json  rescore.py  run.py
benchmarks/published/: appbench-qwen3-4b-v0.1-3x.summary.json  appbench-qwen3-4b-v0.2-taskgraph-3x.summary.json
conformance/: README.md
conformance/cases/: refund_grounding_repair.json
conformance/memory/: deletion.json  scope_isolation.json  (+2 more)
crates/operon-core/: Cargo.toml
crates/operon-core/include/: operon_core.h
crates/operon-core/src/: context.rs  error.rs  ffi.rs  lib.rs  models.rs  protocol.rs  runtime.rs  wasm.rs
crates/operon-core/tests/: protocol_conformance.rs
scripts/: build-apple-xcframework.sh  verify-apple-xcframework.sh
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/operon/: __init__.py  cli.py  grounding.py  memory.py  models.py  runtime.py  schema.py  sessions.py  skills.py
sdk/python/src/operon/providers/: __init__.py  base.py  openai_compatible.py
sdk/python/tests/: test_benchmark.py  test_cli.py  test_grounding.py  test_memory.py  test_memory_conformance.py  test_provider.py  test_runtime.py  test_security.py  test_sessions.py
site/: app.js  index.html  story.css  styles.css
spec/: README.md  execution-protocol.md  trace-format.md
(+61 files in other folders)
