[workspace]
members = ["crates/operon-core"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/markdsparks/operon"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-time = "1"
